# Charlie2D-Project-Template

./: CMakeLists.txt  README.md  appimage.cmake
.cache/clangd/index/: Alighnment.h.23B64A2B4EFAEA5C.idx  Angle.h.314EEF6DEFF59174.idx  Animation.h.FE5F7AB2BFA4B0CA.idx  Audio.h.23BA22F6808A01D2.idx  Box.h.5F15F12FAA661DEB.idx  Button.h.CE4E7CFC4DC570BF.idx  Camera.h.29C9A3E8022EE22B.idx  Charlie2D.h.1EEED558628727B6.idx  Circle.h.6CAF1BEFA8E69E82.idx  Component.h.8C1D6C8E7C2F6CAD.idx  ControllerManager.h.6E9E5FFB977A9EF0.idx  Entity.h.72348E920F182A70.idx  Event.h.DD6E6C4958868214.idx  ExtendedComponent.h.710BA6A6A14F2EA3.idx  GameManager.h.A4F21633AF2C2FCB.idx  Image.h.A2064D8690F0F44D.idx  InputManager.h.F06A66BB41E5BBD1.idx  JumpMan.h.915B0C07DC60FB04.idx  LDTKEntity.h.A6610C9BBCA62A65.idx  Light.h.CDFE43664DBD6AF4.idx  Math.h.59BFEFD2D0584512.idx  ResourceManager.h.90AB392F12A74216.idx  SDL.h.2F87D3256D43DADA.idx  SDL2_framerate.h.990799009F29F7A6.idx  SDL_assert.h.B5ABF6AAC7006C31.idx  SDL_atomic.h.F25A93BC6365D7FF.idx  SDL_audio.h.DD4FFA0EB9FD54EC.idx  SDL_blendmode.h.9FF9EB7FDE93B9B1.idx  SDL_clipboard.h.2311CDD24DFCB1C9.idx  SDL_config.h.33C4484ED358201A.idx  SDL_cpuinfo.h.7E50587646A8F55F.idx  SDL_endian.h.8B7D92671557FCEA.idx  SDL_error.h.12822437788CB7A3.idx  SDL_events.h.25E401CD97F92BBD.idx  SDL_filesystem.h.5FE5E38969CB6400.idx  SDL_gamecontroller.h.15F08278D733C02A.idx  SDL_gesture.h.FF354E4DDE6B4CAF.idx  SDL_guid.h.7E3DFEAB417A16EF.idx  SDL_haptic.h.11A38DF967C8B618.idx  SDL_hidapi.h.E7D71D3391112370.idx  (+98 more)
include/charlie2D/: UICanvas.h
lib/linux/SDL2/: libjxl.so.0.10
src/: components.h  creaters.h  main.cpp
